...
    <string name="dinner">Dinner</string>
    <string name="fragment">fragment</string>
    <string name="water">Water</string>
    <string name="snack">Snack</string>
    <string name="enter_snack_calories">Enter snack calories</string>
    <string name="enter_amount_in_ml">Enter amount in ml</string>
    <string name="go_back">go back</string>

    <!-- account info: name, email, confirm email, username, password -->
    <!-- profile: weight, goal weight, !!profile pic!! -->
    <!-- settings: clear workout db, clear weight log db, notifications toggle-->


...
